<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FilePlore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="change_view">切换试图</string>
    <string name="titlename_1">分类浏览</string>
    <string name="titlename_2">目录浏览</string>
    <string name="movie">视频</string>
    <string name="music">音乐</string>
    <string name="txt">文档</string>
    <string name="zip">压缩包</string>
    <string name="photo">照片</string>
    <string name="recivedfile">收到的文件</string>
    <string name="unknown">未知文件</string>
    <string name="apk">安装包</string>
    <string name="SdCapacity">SD卡容量 : </string>
    <string name="PhoneCapacity">手机容量 : </string>
    <string name="default_path">/</string>
    <string name="default_count"> 项</string>
    <string name="img_description"> 图片加载中</string>
    <string name="capacity">容量 : </string>
    <string name="notuse_capacity">可用 : </string>
    <string name="netshare">网络共享 : </string>
    <string name="reseach">刷新</string>
    <string name="localfile">本地文件</string>
    <string name="set">设置</string>
    <string name="netfile">网络文件</string>
    <string name="sambafile">Samba文件</string>
    <string name="sharefile">已共享文件</string>
    <string name="current_net">当前网络中的设备：</string>
    <string name="wait">请稍等</string>
    <string name="downlist">下载列表 : </string>
    <string name="scanner">扫一扫</string>
    <string name="shareto">分享</string>
    <string name="scan_qrcode">将二维码放入框内，即可自动扫描</string>
    <string name="scan_onecode">将条形码放入框内，即可自动扫描</string>
    <string name="scan_qr">二维码</string>
    <string name="scan_one">条形码</string>
    <string name="scan_help">帮助</string>
    <string name="scan_scan">扫一扫</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_content">扫描内容</string>
    <string name="scan_back">返回</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机可能被占用，您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="server_url">服务器地址 ：</string>
    <string name="password">密码 ：</string>
    <string name="username">用户名 ：</string>
    <string name="folder">文件夹 ：</string>
    <string name="wechat_vedio">微信小视频</string>
    <string name="qq_file">QQ文件</string>
    <string name="app">应用</string>
    <string name="night">夜间模式</string>
    <string name="setshare">开启共享功能</string>
    <string name="sethide">显示隐藏文件</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="share">共享</string>
    <string name="push">推送</string>
    <string name="qr">二维码</string>
    <string name="detail">属性</string>
    <string name="cancel">取消</string>
    <string name="paste">粘贴</string>
    <string name="cut">剪切</string>
    <string name="newfile">新建</string>
    <string name="more">更多</string>
    <string name="sort">排序</string>
    <string name="seach">搜索</string>
    <string name="selectall">全选</string>
    <string name="percent">0%</string>
    <string name="sort_time">按时间排序</string>
    <string name="sort_name">按名称排序</string>
    <string name="filename">文件名：</string>
    <string name="searchfile">搜索文件</string>
    <string name="recivefile">收到文件</string>
    <string name="recive">接收</string>
    <string name="look">查看</string>
    <string name="message">消息：</string>
    <string name="reply">回复</string>
    <string name="push_to_this_device">推送文件</string>

</resources>