<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/main_bg"
    android:orientation="vertical"
    tools:context="com.changhong.fileplore.activities.PloreActivity" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="4dp"
        android:background="?attr/main_bg" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/path"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/path"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/img_description"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
              android:paddingTop="2dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/iv_back"
            android:background="?shape_bg"
            android:maxEms="20"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:textColor="?main_textcolor"
            android:text="@string/default_path"
            android:textSize="@dimen/top_textsize" />

        <TextView
            android:id="@+id/item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="?main_textcolor"
            android:text="@string/default_count"
            android:textSize="@dimen/top_textsize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_marginTop="2dp"
        android:paddingBottom="2dp"
        android:background="?attr/main_bg"
        android:orientation="vertical"
        android:paddingEnd="5dp"
        android:paddingStart="5dp" >

        <com.changhong.ttfileplore.view.RefreshListView
            android:id="@+id/file_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             android:background="?main_bg"
            android:cacheColorHint="@android:color/transparent"
            android:divider="?attr/main_bg"
            android:dividerHeight="4dp"
            android:fadingEdge="none" />
    </RelativeLayout>

    <LinearLayout
       
        android:id="@+id/ll_btn"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        
        android:orientation="horizontal"
        android:background="@color/btnblack"
        android:visibility="gone" >

        <Button
            android:id="@+id/plore_btn_selectall"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="?attr/item_bg_deep"
            android:text="@string/selectall" />

        <Button
            android:id="@+id/plore_btn_cut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:textColor="?attr/item_bg_deep"
            android:text="@string/cut" />

        <Button
            android:id="@+id/plore_btn_copy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:textColor="?attr/item_bg_deep"
            android:text="@string/copy" />

        <Button
            android:id="@+id/plore_btn_more"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:textColor="?attr/item_bg_deep"
            android:text="@string/more" />
    </LinearLayout>
 <LinearLayout
      
        android:id="@+id/ll_btn_default"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
       
        android:orientation="horizontal"
        android:background="@color/btnblack"
        android:visibility="visible" >

        <Button
            android:id="@+id/plore_btn_newfile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="?attr/item_bg_deep"
            android:text="@string/newfile" />

        <Button
            android:id="@+id/plore_btn_paste"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:textColor="?attr/item_bg_deep"
            android:text="@string/paste" />

        <Button
            android:id="@+id/plore_btn_sort"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:textColor="?attr/item_bg_deep"
            android:text="@string/sort" />

        <Button
            android:id="@+id/plore_btn_seach"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:textColor="?attr/item_bg_deep"
            android:text="@string/seach" />
    </LinearLayout>
</RelativeLayout>