<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TableRow
        android:background="@color/btnblack">

    <TextView
      android:textColor="@color/bright_foreground_disabled_material_dark"
        android:textSize="15sp"
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchfile" >
    </TextView>
    </TableRow>
    <TableRow
        android:layout_marginBottom="5dp"
        android:background="?item_bg_deep">

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filename" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:hint=""
            android:inputType="text"
            android:labelFor="@+id/et_filename"
            android:id="@+id/et_filename"
            android:lines="1"
            android:ems="10"
            android:maxLines="3"
            android:layout_marginEnd="3dp"/>
    </TableRow>
    <LinearLayout

        android:id="@+id/ll_btn_default"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@color/btnblack"
        android:visibility="visible" >

        <Button
            android:id="@+id/btn_searchdialog_search"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="?attr/main_bg"
            android:text="@string/seach" />

        <Button
            android:textSize="15sp"
            android:id="@+id/btn_searchdialog_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="?attr/main_bg"
            android:text="@string/cancel" />


    </LinearLayout>
</TableLayout>