<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?main_bg"
    android:orientation="vertical"
    tools:context="com.changhong.fileplore.activities.PloreActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/id_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="false">
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?main_bg" >

        <TextView
            android:textColor="?attr/main_textcolor"
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:text="@string/default_path"
            android:textSize="@dimen/top_textsize" />

        <TextView
            android:textColor="?attr/main_textcolor"
            android:id="@+id/item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/path"
            android:layout_alignParentEnd="true"
            android:text="@string/default_count"
            android:textSize="@dimen/top_textsize"
            android:gravity="end" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="?attr/main_bg"
        android:orientation="vertical"
       >

        <com.changhong.ttfileplore.view.RefreshListView
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:id="@+id/file_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="?attr/main_bg"
            android:dividerHeight="2dp"
            android:fadingEdge="none" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:src="@drawable/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="5dp"
            />
        <io.codetail.widget.RevealFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/btnblack"
            android:visibility="invisible" >

            <Button
                android:id="@+id/classify_btn_selectall"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="?attr/item_bg_deep"
                android:text="@string/selectall" />

            <Button
                android:id="@+id/classify_btn_share"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="?attr/item_bg_deep"
                android:text="@string/share" />
            <Button
                android:id="@+id/classify_btn_push"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="?attr/item_bg_deep"
                android:text="@string/push" />
            <Button
                android:id="@+id/classify_btn_qr"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="?attr/item_bg_deep"
                android:text="@string/qr" />

            <Button
                android:id="@+id/classify_btn_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="?attr/item_bg_deep"
                android:text="@string/delete" />
        </LinearLayout>
       </io.codetail.widget.RevealFrameLayout>
    </RelativeLayout>

</LinearLayout>