<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow android:background="@color/btnblack">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/recivefile"
            android:textColor="@color/bright_foreground_disabled_material_dark"
            android:textSize="15sp"/>
    </TableRow>

    <TableRow
        android:background="?item_bg"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:gravity="center"
            android:textColor="?main_textcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:textSize="@dimen/textsize_message"
            android:text="@string/message"/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:ems="10"
            android:textSize="@dimen/textsize_message"
            android:labelFor="@+id/ev_message"
            android:lines="1"
            android:maxLines="3"
            android:textColor="?main_textcolor" />
    </TableRow>

    <LinearLayout

        android:id="@+id/ll_btn_default"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@color/btnblack"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_recivedialog_recive"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/look"
            android:textColor="?attr/main_bg"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_recivedialog_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="?attr/main_bg"
            android:textSize="15sp" />


    </LinearLayout>
</TableLayout>