<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:background="@drawable/corners_selector"
 
    android:descendantFocusability="blocksDescendants"
        >

    <ImageView
        android:contentDescription="@string/img_description"
         android:scaleType="centerInside"
        android:id="@+id/iv_download"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp" />

    <TextView
        android:paddingTop="3dp"
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_download"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/iv_download"
        android:ems="8"
        android:ellipsize="middle"
        android:maxLines="1"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/download_bar"
        style="@style/downBarStyle"
        android:layout_width="185dp"
        android:layout_height="13dp"
      
        android:layout_below="@+id/tv_name"
        android:layout_alignStart="@+id/tv_name"
       
        android:layout_marginTop="5dp"
        android:max="1000" />

   

    <TextView
        android:paddingTop="3dp"
        android:id="@+id/tv_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/download_bar"
        android:text="@string/percent"
        android:textSize="13sp" />
     <Button
        android:focusable="false"
        android:id="@+id/btn_download"
        android:layout_width="50dp"
        android:layout_height="35dp"    
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/cancel"
        android:textSize="13sp" />

</RelativeLayout>