<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?shape_popmenu">


        <TextView
            android:layout_margin="6dp"
            android:id="@+id/tv_title_pushdialog"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/push_to_this_device"
            android:textColor="@color/gray"
            android:textSize="15sp"/>
    <ImageView
        android:layout_below="@+id/tv_title_pushdialog"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#50000000"
        />
    <RelativeLayout
        android:id="@+id/rl_pushdialog"
        android:layout_below="@+id/tv_title_pushdialog"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tv_message_"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="留言：" >
        </TextView>

        <EditText
            android:padding="5dp"
            android:layout_toEndOf="@+id/tv_message_"

            android:textColor="?main_textcolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="top"
            android:hint=""
            android:inputType="text|textMultiLine"
            android:labelFor="@+id/ev_message"
             android:id="@+id/ev_message"
            android:singleLine="false"
            android:scrollHorizontally="false" />
    </RelativeLayout>
    <ImageView
        android:layout_below="@+id/rl_pushdialog"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#50000000"
        />
    <LinearLayout
    android:layout_below="@+id/rl_pushdialog"
        android:id="@+id/ll_btn_default"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="35dp"

        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_pushdialog_push"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/push"
            android:textColor="?mcolorAccent"
            android:textSize="15sp" />
        <ImageView
          android:layout_marginTop="3dp"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#50000000"
            />
        <Button
            android:id="@+id/btn_pushdialog_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="?mcolorAccent"
            android:textSize="15sp" />


    </LinearLayout>
</RelativeLayout>